Fix light and dark mode styles

--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -7,14 +7,14 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: var(--pst-color-surface);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
-    color: #545F71;
+    color: var(--pst-color-text-muted);
     padding: 8px;
     text-decoration: none;
     display: block;
@@ -29,14 +29,24 @@
 }
 
 /* Additional styling for customization */
+.variant-picker-caption {
+    color: var(--pst-color-text-muted);
+}
+
 .dropdown-button {
-    background-color: #F2F3F4;
-    color: #545F71;
-    padding: 8px;
-    border: 1px solid #E2E4E7;
-    cursor: pointer;
+    background-color: var(--pst-color-surface);
+    border: 1px solid var(--pst-color-border);
+    border-radius: 1em;
+    color: var(--pst-color-text-muted);
+    display: inline-flex;
+    padding: .5em;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    width: 100%;
 }
 
 .dropdown-button:hover {
-    background-color: #F2F3F4;
+    box-shadow: 0 0 0 .1875rem var(--pst-color-link-hover);
+
 }
+
